k8s/overlays/pre/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
spec:
  rules:
    - host: sample-api.pre.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-api
                port:
                  number: 80
